--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: cayman
+title: Yantram Blog
+author: Sunny-Vats
+email: ssunnyvvats.0608@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This blog page is for Java tutorial classes. I have tried to capture all the
+  things in one place. To absorb all the knowledge, kindly practise as you read. 
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
